# hashFIles

./: .gitignore  CMakeLists.txt  README.md  TrappingError.cpp  TrappingError.h  error.cpp  error.h  fileInfo.cpp  fileInfo.h  hash.cpp  hash.h  jsonReader.cpp  jsonReader.h  main.cpp  print.h  trappingError.cpp
current_files/: listFiles.json  test_1.txt
src/: CMakeLists.txt  error.cpp  error.h  fileInfo.cpp  fileInfo.h  hash.cpp  hash.h  jsonReader.cpp  jsonReader.h  listFiles.json  main.cpp  print.cpp  print.h  stringFunction.cpp  stringFunction.h
test/: CMakeLists.txt  JsonReaderTest.cpp  hash-test.cpp  splitTest.cpp
